Adjusted desktop version added mobile design. Still need to fix background positioning on mobile and hero image position

--- a/styles.css
+++ b/styles.css
@@ -14,22 +14,26 @@
 }
 
 body {
+	min-height: 100vh;
 	background-image: url(./images/pattern-background-desktop.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-color: var(--pale-blue);
 	font-size: 16px;
 	font-family: 'Red Hat Display', sans-serif;
-	height: 100vh;
+	position: relative;
 }
 
 .card {
-	width: 450px;
+	max-width: 450px;
 	background-color: white;
 	color: var(--desaturated-blue);
 	border-radius: 20px;
-	margin: 50px auto;
 	overflow: hidden;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .title {
@@ -47,7 +51,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
-	padding: 30px;
+	padding: 52px;
 	font-size: 18px;
 }
 
@@ -69,12 +73,21 @@ body {
 	padding: 25px;
 	border-radius: 12px;
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.plan-container a {
+.plan-container-left {
+	display: flex;
+	align-items: center;
+	text-align: left;
+}
+
+.plan-container-left div {
+	margin-left: 20px;
+}
+
+.plan-container-right a {
 	color: var(--bright-blue);
 	font-size: 13px;
 	font-weight: 700;
@@ -102,6 +115,7 @@ button {
 .cancel-button {
 	background-color: white;
 	color: var(--desaturated-blue);
+	font-weight: 700;
 	border: none;
 	margin-top: 22px;
 }
@@ -113,6 +127,7 @@ button {
 .proceed-button {
 	background-color: var(--bright-blue);
 	padding: 1rem 0;
+	font-weight: 700;
 	color: white;
 	box-shadow: 0 20px 30px -8px rgb(197 189 245);
 }
@@ -124,7 +139,55 @@ button {
 .attribution {
 	font-size: 11px;
 	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 90%;
+	transform: translate(-50%, -50%);
 }
 .attribution a {
 	color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (max-width: 375px) {
+	body {
+		background-image: url(./images/pattern-background-mobile.svg);
+		background-size: 100vw auto;
+	}
+
+	.card {
+		width: 327px;
+	}
+
+	.container {
+		width: 100%;
+		padding: 27px;
+	}
+
+	.hero-img {
+		width: 100%;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.title {
+		font-size: 22px;
+	}
+
+	.order-description {
+		font-size: 15px;
+		line-height: 25px;
+	}
+
+	.plan-container {
+		padding: 12px;
+	}
+
+	.plan-container-left div {
+		margin-left: 10px;
+	}
+
+	button {
+		font-size: 15px;
+	}
 }
